--- a/manifests/base/api-gateway-deployment.yaml
+++ b/manifests/base/api-gateway-deployment.yaml
@@ -19,6 +19,25 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 8000
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 3
+            periodSeconds: 5
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "100m"
+            limits:
+              memory: "256Mi"
+              cpu: "500m"
           envFrom:
             - configMapRef:
                 name: api-gateway-config
