--- a/manifests/base/ollama-deployment.yaml
+++ b/manifests/base/ollama-deployment.yaml
@@ -16,8 +16,21 @@ spec:
       containers:
         - name: ollama
           image: ollama/ollama:latest
+          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 11434
+          startupProbe:
+            httpGet:
+              path: /api/tags
+              port: 11434
+            initialDelaySeconds: 10
+            periodSeconds: 5
+            failureThreshold: 30
+          livenessProbe:
+            httpGet:
+              path: /api/tags
+              port: 11434
+            periodSeconds: 5
           volumeMounts:
             - name: models
               mountPath: /root/.ollama
