--- a/manifests/base/api-gateway-deployment.yaml
+++ b/manifests/base/api-gateway-deployment.yaml
@@ -5,6 +5,11 @@ metadata:
   namespace: ai-gateway
 spec:
   replicas: 1
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   selector:
     matchLabels:
       app: api-gateway
@@ -12,6 +17,7 @@ spec:
     metadata:
       labels:
         app: api-gateway
+        version: blue
     spec:
       containers:
         - name: api-gateway
