Ingress, NetworkPolicy, RBAC
- Added api-gateway-ingress.yaml (nginx ingress for ai-gateway.local)
- Added redis-network-policy.yaml (restrict Redis access to api-gateway only)
- Added api-gateway-rbac.yaml (ServiceAccount, Role, RoleBinding)
- Wired ServiceAccount into api-gateway deployment
- Note: NetworkPolicy requires Calico CNI - will test on EKS

--- a/manifests/base/api-gateway-deployment.yaml
+++ b/manifests/base/api-gateway-deployment.yaml
@@ -19,6 +19,7 @@ spec:
         app: api-gateway
         version: blue
     spec:
+      serviceAccountName: api-gateway-sa
       containers:
         - name: api-gateway
           image: ai-gateway:v9
