--- a/manifests/base/kustomization.yaml
+++ b/manifests/base/kustomization.yaml
@@ -14,3 +14,6 @@ resources:
   - qdrant-statefulset.yaml
   - qdrant-service.yaml
   - api-gateway-hpa.yaml
+  - api-gateway-ingress.yaml
+  - redis-networking-policy.yaml
+  - api-gateway-rbac.yaml
