--- a/manifests/base/gateway-settings.yaml
+++ b/manifests/base/gateway-settings.yaml
@@ -8,7 +8,7 @@ data:
     {
       "models": {
         "default": "llama3.2:1b",
-        "fallback": "gpt-40-mini"
+        "fallback": "gpt-4.1-mini"
       },
       "timeouts": {
         "inference": 30,
@@ -17,5 +17,11 @@ data:
       "features": {
         "checking_enabled": true,
         "rate_limiting_enabled": true
+      },
+      "provider_models": {
+        "openai": ["gpt-5", "gpt-4", "gpt-3.5", "o1", "o3"],
+        "anthropic": ["claude"],
+        "bedrock": ["amazon", "anthropic.claude", "meta.llama"],
+        "ollama": ["llama", "mistral", "codellama", "phi", "neural_chat", "vicuna", "qwen"]
       }
     }
