Completed content safety guardrails phase 1
- Add guardrails module with base classes and enums
- Implement ContentSafetyGuard with keyword-based detection
- Add 12 threat categories (violence, prompt injection, etc.)
- Config-driven via guardrail-settings ConfigMap
- Integrate pre-request evaluation in main.py
- Add unit tests for guardrail functionality
- Update deployment to mount guardrail ConfigMap

--- a/manifests/base/api-gateway-deployment.yaml
+++ b/manifests/base/api-gateway-deployment.yaml
@@ -22,7 +22,7 @@ spec:
       serviceAccountName: api-gateway-sa
       containers:
         - name: api-gateway
-          image: ai-gateway:v9
+          image: ai-gateway:v18
           imagePullPolicy: Never
           ports:
             - containerPort: 8000
@@ -56,10 +56,14 @@ spec:
             - name: OLLAMA_HOST
               value: "ollama"
           volumeMounts:
-            - name: settings-volume
+            - name: config-volume
               mountPath: /app/config
               readOnly: true
       volumes:
-        - name: settings-volume
-          configMap:
-            name: gateway-settings
+        - name: config-volume
+          projected:
+            sources:
+              - configMap:
+                  name: gateway-settings
+              - configMap:
+                  name: guardrail-settings
