Jailbreak detection guard with 3-layer analysis
- Add JailbreakGuard with exact phrase, fuzzy pattern, and structural detection
- Confidence scoring with configurable threshold (default 0.7)
- Structural signal accumulation with boost formula
- Chain Guard 3 in main.py after content safety and PII guards
- Add jailbreak_settings.json to guardrail-settings ConfigMap
- 16 unit tests passing (test_jailbreak_guard.py)
- Fix ConfigMap JSON syntax (missing closing braces)
- All 3 guards live-tested on v19: content safety, PII, jailbreak
- Update README with Phase 11a/11b completion

--- a/manifests/base/guardrail-settings.yaml
+++ b/manifests/base/guardrail-settings.yaml
@@ -84,3 +84,58 @@ data:
         }
       }
     }
+  pii_settings.json: |
+    {
+      "enabled": true,
+      "default_action": "block",
+      "mask_strategy": "full",
+      "pii_types": {
+        "SSN": {
+          "enabled": true,
+          "severity": "critical",
+          "action": "block",
+          "mask_strategy": "full"
+        },
+        "CREDIT_CARD": {
+          "enabled": true,
+          "severity": "critical",
+          "action": "block",
+          "mask_strategy": "partial"
+        },
+        "EMAIL": {
+          "enabled": true,
+          "severity": "high",
+          "action": "redact",
+          "mask_strategy": "partial"
+        },
+        "PHONE": {
+          "enabled": true,
+          "severity": "high",
+          "action": "redact",
+          "mask_strategy": "partial"
+        },
+        "IP_ADDRESS": {
+          "enabled": true,
+          "severity": "medium",
+          "action": "log",
+          "mask_strategy": "full"
+        },
+        "DOB": {
+          "enabled": true,
+          "severity": "high",
+          "action": "redact",
+          "mask_strategy": "full"
+        }
+      }
+    }
+  jailbreak_settings.json: |
+    {
+      "enabled": true,
+      "default_action": "block",
+      "confidence_threshold": 0.7,
+      "layers": {
+        "exact_phrases": true,
+        "fuzzy_patterns": true,
+        "structural": true
+      }
+    }
